webapp: implementa roteamento de tela perguntas e tags

--- a/WebAppNullPointer/src/index.css
+++ b/WebAppNullPointer/src/index.css
@@ -3,6 +3,8 @@
   line-height: 1.5;
   font-weight: 400;
 
+  padding: 0px;
+
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #252525;
@@ -11,4 +13,6 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --cor-destaque: #D0192A;
 }
