--- a/WebAppNullPointer/src/index.css
+++ b/WebAppNullPointer/src/index.css
@@ -14,5 +14,5 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  --cor-destaque: #D0192A;
+  --cor-destaque: 255,193,14;
 }
