--- a/WebAppNullPointer/src/components/Hero/styles.css
+++ b/WebAppNullPointer/src/components/Hero/styles.css
@@ -1,8 +1,8 @@
 .hero-container {
-    background-color: var(--cor-destaque);
+    background-color: rgba(var(--cor-destaque), 0.75);
     color: whitesmoke;
     padding: 20px 34px;
-    border-radius: 13px;
+    border-radius: 8px;
 
     display: flex;
     justify-content: space-between;
@@ -14,10 +14,12 @@
     padding: 0px;
     margin: 0px;
     text-transform: uppercase;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+    color: white;
 }
 
 .hero-container > input {
-    border: none;
+    border: 2px solid rgba(var(--cor-destaque), 0.35);
     border-radius: 8px;
     min-width: 300px;
     background-color: rgba(0, 0, 0, 0.2);
@@ -25,4 +27,7 @@
     outline: none;
 
     font-size: 16px;
+}
+.hero-container > input:focus {
+    border: 2px solid rgba(var(--cor-destaque), 0.89);
 }
