--- a/WebAppNullPointer/src/components/Resposta/styles.css
+++ b/WebAppNullPointer/src/components/Resposta/styles.css
@@ -13,8 +13,8 @@
     align-items: flex-start;
     gap: 10px;
 
-    padding-bottom: 10px;
-    border-bottom: 1px solid grey;
+    /* padding-bottom: 10px; */
+    /* border-bottom: 1px solid rgb(100, 100, 100); */
 }
 .resposta > div > p {
     box-sizing: border-box;
