--- a/WebAppNullPointer/src/pages/PerguntaDetails/styles.css
+++ b/WebAppNullPointer/src/pages/PerguntaDetails/styles.css
@@ -6,9 +6,19 @@
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
+    flex-wrap: nowrap;
     gap: 20px;
 
-    padding-bottom: 10px;
+    padding: 20px;
+}
+.pergunta-mensagem small {
+    display: flex;
+    justify-content: flex-start;
+
+    gap: 20px;
+    margin-bottom: 10px;
+
+    text-wrap: nowrap;
 }
 .pergunta-mensagem p {
     box-sizing: border-box;
