--- a/WebAppNullPointer/src/App.css
+++ b/WebAppNullPointer/src/App.css
@@ -5,3 +5,39 @@
   padding-bottom: 100px;
   box-sizing: border-box;
 }
+
+.btn {
+  padding: 8px 15px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: bold;
+  text-transform: uppercase;
+  transition: background-color .2s ease-in-out;
+}
+
+.btn-sm {
+  font-size: 12px;
+}
+.btn-md {
+  font-size: 14px;
+}
+.btn-lg {
+  font-size: 16px;
+}
+
+.btn-destaque {
+  color: #202020;
+  background-color: rgb(var(--cor-destaque));
+}
+.btn-destaque:hover {
+  background-color: whitesmoke;
+}
+
+.btn-secondary {
+  color: #202020;
+  background-color: #bbb;
+}
+.btn-secondary:hover {
+  background-color: whitesmoke;
+}
