webapp: fix datas

--- a/WebAppNullPointer/src/components/PerguntaTags/styles.css
+++ b/WebAppNullPointer/src/components/PerguntaTags/styles.css
@@ -5,8 +5,8 @@
     gap: 8px;
     max-width: 400px;
     color: var(--cor-destaque);
-    margin: 10px 0px;
-    padding: 5px;
+    /* margin: 10px 0px;
+    padding: 5px; */
 }
 
 .pergunta-tags > span {
