--- a/WebAppNullPointer/src/components/Pergunta/styles.css
+++ b/WebAppNullPointer/src/components/Pergunta/styles.css
@@ -21,6 +21,7 @@
     transition: color .2s ease-in-out;
     display: inline-block;
     width: 100%;
+    font-size: 16px;
 }
 .pergunta-ttl-link:hover {
     color: rgba(255, 255, 255, 1.0);
@@ -29,6 +30,7 @@
 .pergunta-container > p {
     padding: 0px;
     margin: 0px;
+    font-size: 14px;
 
     white-space: nowrap;
     overflow: hidden !important;
@@ -39,6 +41,7 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
+    font-size: 12px;
 }
 .pergunta-footer > span {
     text-wrap: nowrap;
