--- a/WebAppNullPointer/src/components/Resposta/styles.css
+++ b/WebAppNullPointer/src/components/Resposta/styles.css
@@ -17,9 +17,12 @@
     /* border-bottom: 1px solid rgb(100, 100, 100); */
 }
 .resposta > div > p {
+
+    width: 100%;
     box-sizing: border-box;
     padding: 0px;
     margin: 0px;
+    margin-left: 5px;
 }
 
 .resposta-votos {
