--- a/src/web/src/index.css
+++ b/src/web/src/index.css
@@ -16,3 +16,11 @@
 
   --cor-destaque: 32,254,114;
 }
+
+/* Change the white to any color */
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+  -webkit-box-shadow: 0 0 0 30px #333 inset !important;
+}
