--- a/src/web/src/pages/PerguntaFormPage/styles.css
+++ b/src/web/src/pages/PerguntaFormPage/styles.css
@@ -17,19 +17,8 @@
     color: whitesmoke;
 }
 
-.pergunta-form-page input, textarea {
+.pergunta-form-page input {
     width: 98%;
     padding: 8px;
     font-size: 16px;
-}
-
-.pergunta-form-page textarea {
-    height: 55px;
-}
-
-.pergunta-form-page div {
-    display: flex;
-    gap: 15px;
-
-    margin-top: 15px;
 }
