webapp: modifica upload de arquivos, mantendo links no front e o arquivo para back

--- a/src/web/src/components/RichTextEditor/custom-dark.css
+++ b/src/web/src/components/RichTextEditor/custom-dark.css
@@ -44,6 +44,6 @@
 }
 
 /* menu links */
-.jodit-ui-input__input {
+.jodit-ui-input__input, .jodit-ui-text-area__input {
     background-color: #333 !important;
 }
