--- a/src/web/src/pages/PerguntaFormPage/styles.css
+++ b/src/web/src/pages/PerguntaFormPage/styles.css
@@ -22,3 +22,10 @@
     padding: 8px;
     font-size: 16px;
 }
+
+.pergunta-form-page__buttons {
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 20px;
+    padding-top: 20px
+}
